Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32550

CMAKE_TEST_LAUNCHER value affects running and debugging non-test executables

XMLWordPrintable

    • macOS
    • ab303306a (18.0)

      Setting CMAKE_TEST_LAUNCHER variable affects how Qt Creator runs and debugs all project executables, not just tests.

      Just setting the variable prevents debugging main executable as Qt Creator attempts to launch everything through a custom launcher.

      Steps to reproduce

      1. Open and configure the CMakeLists.txt project for Debug
      2. Start debugging of Startup Project

      Expected

      Application starts and remains running

      Actual

      Debugger launches the test runner instead and immediately quits (note that it even does not matter if the launcher script exists).

      15:03:57: Debugging /Users/user/sandbox/test_runner_example/test_runner.sh /Users/user/sandbox/test_runner_example/build/Qt_6_2_12_for_macOS-Debug/TestRunnerExample ...
      15:03:58: Debugging of /Users/user/sandbox/test_runner_example/test_runner.sh /Users/user/sandbox/test_runner_example/build/Qt_6_2_12_for_macOS-Debug/TestRunnerExample has finished.
      

        For Gerrit Dashboard: QTCREATORBUG-32550
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            pavol Pavol Markovic
            Votes:
            3 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes