CMakePM: Only set CTest launchers for test targets

CMake sets the TEST_LAUNCHER property of targets from the global
CMAKE_TEST_LAUNCHER variable. This is applied for non-test targets.

This commit clears such launchers from the non-test targets.

Fixes: QTCREATORBUG-32550
Change-Id: I997b377a600e2c41227162562d0d990d160194a5
Reviewed-by: Christian Stenger <christian.stenger@qt.io>